--- a/channel.html
+++ b/channel.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <title>Frends</title>
+  <title>channel</title>
 </head>
 <body>
   <header>
@@ -25,18 +25,16 @@
     </div>
     <div class="header__bottom">
       <div class="header__cloumn">
-        <span class="header__text">편집</span>
-      </div>
-      <div class="header__cloumn">
-        <span class="header__text">친구</span><span class="header__number">21</span>
+        <span class="header__text">채널</span>
       </div>
       <div class="header__cloumn">
         <i class="fa fa-cog fa-lg"></i>
       </div>
     </div>
   </header>
+
   <nav>
-    <a href="index.html" class="tab-bar__tab tab-bar__tab--selected">
+    <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
       <span class="tab-bar__title">친구</span>
     </a>
@@ -46,12 +44,12 @@
       <span class="tab-bar__title">채팅</span>
     </a>
 
-    <a href="channel.html" class="tab-bar__tab">
+    <a href="channel.html" class="tab-bar__tab tab-bar__tab--selected">
       <i class="fa fa-search"></i>
       <span class="tab-bar__title">채널</span>
     </a>
 
-    <a href="more.html" class="tab-bar__tab">
+    <a href="more.html" class="tab-bar__tab tab">
       <i class="fa fa-ellipsis-h"></i>
       <span class="tab-bar__title">더보기</span>
     </a>
