채팅 페이지 html,js 작성

--- a/chats.html
+++ b/chats.html
@@ -35,6 +35,37 @@
       </div>
     </div>
   </header>
+  <main class="chats">
+    <div class="search-bar">
+      <i class="fa fa-search"></i>
+      <input type="text" placeholder="Find friends, chats, Plus friends">
+    </div> <!-- 검색 섹션 -->
+    <ul class="chats_list">
+      <li class="chats chat">
+        <div class="chat__content">
+          <img src="">
+          <div class="chat__privew">
+            <h3 class="chat__user">유정</h3>
+            <span class="chat__last-message">뭐해?</span>
+          </div>
+        </div>
+        <div class="chat__date-time">12:25</div>
+      </li>
+    </ul> <!-- 첫번째 유저 채팅 기록 -->
+
+    <ul class="chats_list">
+      <li class="chats chat">
+        <div class="chat__content">
+          <img src="">
+          <div class="chat__privew">
+            <h3 class="chat__user">지은</h3>
+            <span class="chat__last-message">안녕!!</span>
+          </div>
+        </div>
+        <div class="chat__date-time">11:24</div>
+      </li>
+    </ul>
+  </main>
   <nav>
     <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
