--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> <!-- 폰트 어썸 주소 -->
   <title>Frends</title>
 </head>
 <body>
@@ -33,8 +33,46 @@
       <div class="header__cloumn">
         <i class="fa fa-cog fa-lg"></i>
       </div>
-    </div>
+    </div> <!-- 상단 헤더 섹션 -->
   </header>
+
+  <main class="friends">
+    <div class="search-bar">
+      <i class="fa fa-search"></i>
+      <input type="text" placeholder="Find friends, chats, Plus friends">
+    </div> <!-- 검색 섹션 -->
+
+    <section class="friends__section">
+      <header class="frindes__section-header">
+        <h6 class="friends__section-title">내 프로필</h6>
+      </header>
+      <div class="friends__section-rows">
+        <div class="friends__section-row">
+          <img src="" alt="">
+          <span class="friends__section-name">건상</span>
+        </div>
+        <div class="friends__section-rows">
+          <div class="friends__section-row">
+            <img src="" alt="">
+            <span class="friends__section-name">친구의 이름이 표시됩니다.</span>
+          </div>
+      </div>
+    </section> <!-- 내 프로필 섹션 -->
+
+    <section class="friends__section">
+      <header class="frindes__section-header">
+        <h6 class="friends__section-title">친구</h6>
+      </header>
+      <div class="friends__section-rows">
+        <div class="friends__section-column">
+          <img src= "" alt="">
+          <span class="friends__section-name">유정</span>
+        </div>
+        <span class="friends__section-tagline">유정유정해</span>
+      </div>
+    </section> <!-- 친구 섹션 -->
+    </main>
+
   <nav>
     <a href="index.html" class="tab-bar__tab tab-bar__tab--selected">
       <i class="fa fa-user"></i>
@@ -55,6 +93,6 @@
       <i class="fa fa-ellipsis-h"></i>
       <span class="tab-bar__title">더보기</span>
     </a>
-  </nav>
+  </nav> <!-- 하단 푸터 네비게이션 바 -->
 </body>
 </html>
