더보기 첫번째 섹션 완성

--- a/more.html
+++ b/more.html
@@ -32,6 +32,35 @@
       </div>
     </div>
   </header>
+  <main class="more">
+    <header class="more__header">
+      <div class="more__header-cloumn">
+        <img src="" alt="">
+        <div class="more__hader-info">
+          <h3 class="more__header-title">건상</h3>
+          <span class="more__header-subtitle">rhcn258@gmail.com</span>
+        </div>
+      </div>
+    </header>
+    <section class="more__options">
+      <div class="more__option">
+          <i class="far fa-smile fa-2x"></i>
+          <span class="more__option-title">이모티콘</span>
+      </div>
+      <div class="more__option">
+          <i class="fas fa-gift fa-2x"></i>
+          <span class="more__option-title">선물하기</span>
+      </div>
+      <div class="more__option">
+          <i class="fas fa-user-plus fa-2x"></i>
+          <span class="more__option-title">플러스친구</span>
+      </div>
+      <div class="more__option">
+          <i class="fab fa-github fa-2x"></i>
+          <span class="more__option-title">계정연동</span>
+      </div>
+    </section>
+  </main>
   <nav>
     <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
