더보기 페이지 HTML 완료
더보기 페이지 작성 완료했습니다.

--- a/more.html
+++ b/more.html
@@ -60,6 +60,58 @@
           <span class="more__option-title">계정연동</span>
       </div>
     </section>
+    <section class="more__plus-frindes">
+      <header class="plus__friends__header">
+        <h2 class="plus__friends-title">Plus Friends</h2>
+        <span class="plus__friends-learn-more"><i class="fas fa-info-circle"></i>Learn More </span>
+      </header>
+      <div class="plus__friends-item">
+        <i class="fas fa-utensils"></i>
+        <span class="plus__friends-item-title">주문하기</span>
+      </div>
+      <div class="plus__friends-item">
+        <i class="fas fa-store"></i>
+        <span class="plus__friends-item-title">카카오 스토어</span>
+      </div>
+      <div class="plus__friends-item">
+        <i class="fas fa-tv"></i>
+        <span class="plus__friends-item-title">카카오 TV</span>
+      </div>
+      <div class="plus__friends-item">
+        <i class="fas fa-music"></i>
+        <span class="plus__friends-item-title">카카오 뮤직</span>
+      </div>
+      <div class="plus__friends-item">
+        <i class="fas fa-video"></i>
+        <span class="plus__friends-item-title">카카오 영화</span>
+      </div>
+      <div class="plus__friends-item">
+        <i class="fab fa-cc-visa"></i>
+        <span class="plus__friends-item-title">카카오 페이</span>
+      </div>
+      <div class="plus__friends-item">
+        <i class="fas fa-cloud"></i>
+        <span class="plus__friends-item-title">카카오 날씨</span>
+      </div>
+      <div class="plus__friends-item">
+        <i class="fas fa-plus"></i>
+        <span class="plus__friends-item-title">전체보기</span>
+      </div>
+    </section>
+    <section class="more__options">
+      <div class="more__option">
+        <img src="images/kakao_story.png" class="more__options-image">
+        <span class="more__options-title">카카오 스토리</span>
+      </div>
+      <div class="more__option">
+        <img src="images/kakao_path.png" alt="" class="more__options-image">
+        <span class="more__options-title">패스</span>
+      </div>
+      <div class="more__option">
+        <img src="images/kakao_friends.png" alt="" class="more__options-image">
+        <span class="more__options-title">카카오 프렌드</span>
+      </div>
+    </section>
   </main>
   <nav>
     <a href="index.html" class="tab-bar__tab">
@@ -77,7 +129,7 @@
       <span class="tab-bar__title">채널</span>
     </a>
 
-    <a href="more.html" class="tab-bar__tab tab-bar__tab--selected">
+    <a href="more.html" class="tab-bar__tab tab-bar__tab—selected">
       <i class="fa fa-ellipsis-h"></i>
       <span class="tab-bar__title">더보기</span>
     </a>
