--- a/chats.html
+++ b/chats.html
@@ -6,67 +6,75 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <title>Chats</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class= "top-header">
     <div class="header__top">
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fas fa-plane"></i>
         <i class="fas fa-wifi"></i>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header_time">11:24</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fas fa-moon"></i>
         <i class="fab fa-bluetooth-b"></i>
         <span class="header_bettery">111% <i class="fas fa-battery-full"></i> </span>
       </div>
     </div>
     <div class="header__bottom">
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header__text">편집</span>
       </div>
-      <div class="header__cloumn">
-        <span class="header__text">채팅 <i class="fa fa-caret-down"></i></span>
+      <div class="header__column">
+        <span class="header__text">채팅</span>
+
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fa fa-cog fa-lg"></i>
       </div>
-    </div>
+    </div> <!-- 상단 헤더 섹션 -->
   </header>
   <main class="chats">
     <div class="search-bar">
-      <i class="fa fa-search"></i>
-      <input type="text" placeholder="Find friends, chats, Plus friends">
+
+      <input type="text" placeholder="검색">
     </div> <!-- 검색 섹션 -->
-    <ul class="chats_list">
-      <li class="chats chat">
+    <ul class="chats__list">
+      <li class="chats__chat">
+        <a href="chat.html">
         <div class="chat__content">
-          <img src="">
+          <img src="images/kakao_friends.png">
           <div class="chat__privew">
             <h3 class="chat__user">유정</h3>
             <span class="chat__last-message">뭐해?</span>
+            </div>
           </div>
-        </div>
-        <div class="chat__date-time">12:25</div>
+          <span class="chat__date-time">12:25</span>
+        </a>
       </li>
-    </ul> <!-- 첫번째 유저 채팅 기록 -->
+     <!-- 첫번째 유저 채팅 기록 -->
 
-    <ul class="chats_list">
-      <li class="chats chat">
+      <li class="chats__chat">
+        <a href="chat.html">
         <div class="chat__content">
-          <img src="">
+          <img src="images/kakao_friends.png">
           <div class="chat__privew">
             <h3 class="chat__user">지은</h3>
             <span class="chat__last-message">안녕!!</span>
+            </div>
           </div>
-        </div>
-        <div class="chat__date-time">11:24</div>
+          <span class="chat__date-time">11:24</span>
+        </a>
       </li>
-    </ul>
+    </ul> <!-- 두번째 유저 채팅 기록 --> <!-- 채팅 기록 ul tag 닫는 부분 -->
+    <div class="chat-btn">
+      <i class="fas fa-comment"></i>
+    </div>
   </main>
-  <nav>
+  <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
       <span class="tab-bar__title">친구</span>
