--- a/channel.html
+++ b/channel.html
@@ -6,34 +6,66 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <title>channel</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class= "top-header">
     <div class="header__top">
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fas fa-plane"></i>
         <i class="fas fa-wifi"></i>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header_time">11:24</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fas fa-moon"></i>
         <i class="fab fa-bluetooth-b"></i>
         <span class="header_bettery">111% <i class="fas fa-battery-full"></i> </span>
       </div>
     </div>
     <div class="header__bottom">
-      <div class="header__cloumn">
+      <div class="header__column">
+
+      </div>
+      <div class="header__column">
         <span class="header__text">채널</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fa fa-cog fa-lg"></i>
       </div>
-    </div>
+    </div> <!-- 상단 헤더 섹션 -->
   </header>
+<main class="chats">
+  <div class="search-bar">
+    <input type="text" placeholder="검색">
+  </div> <!-- 검색 섹션 -->
+</main>
+<main class="channel">
+  <div class="channel__header">
+    <div class="channel__header-cloumn">
+      <h2 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h2>
+      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+      <img src="images/news_1.png">
+    </div>
+  </div>
+  <div class="channel__header">
+    <div class="channel__header-cloumn">
+      <h2 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h2>
+      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+      <img src="images/news_1.png">
+    </div>
+  </div>
 
-  <nav>
+  <div class="channel__header">
+    <div class="channel__header-cloumn">
+      <h2 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h2>
+      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+      <img src="images/news_1.png">
+    </div>
+  </div>
+</main>
+  <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
       <span class="tab-bar__title">친구</span>
