--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> <!-- 폰트 어썸 주소 -->
   <title>Frends</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class= "top-header">
     <div class="header__top">
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fas fa-plane"></i>
         <i class="fas fa-wifi"></i>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header_time">11:24</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fas fa-moon"></i>
         <i class="fab fa-bluetooth-b"></i>
         <span class="header_bettery">111% <i class="fas fa-battery-full"></i> </span>
       </div>
     </div>
     <div class="header__bottom">
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header__text">편집</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header__text">친구</span><span class="header__number">21</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fa fa-cog fa-lg"></i>
       </div>
     </div> <!-- 상단 헤더 섹션 -->
@@ -38,8 +39,8 @@
 
   <main class="friends">
     <div class="search-bar">
-      <i class="fa fa-search"></i>
-      <input type="text" placeholder="Find friends, chats, Plus friends">
+      
+      <input type="text" placeholder="검색">
     </div> <!-- 검색 섹션 -->
 
     <section class="friends__section">
@@ -48,8 +49,11 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <img src="" alt="">
-          <span class="friends__section-name">건상</span>
+
+          <img src="images/kakao_friends.png">
+          <a href="profile.html" class="friends__section-name">
+          건상
+          </a>
         </div>
         <div class="friends__section-rows">
           <div class="friends__section-row">
@@ -64,16 +68,18 @@
         <h6 class="friends__section-title">친구</h6>
       </header>
       <div class="friends__section-rows">
-        <div class="friends__section-column">
-          <img src= "" alt="">
+        <div class="friends__section-row with-tagline">
+            <div class="friends__section-column">
+            <img src="images/profile_photo_3.png">
           <span class="friends__section-name">유정</span>
-        </div>
+          </div>
         <span class="friends__section-tagline">유정유정해</span>
+      </div>
       </div>
     </section> <!-- 친구 섹션 -->
     </main>
 
-  <nav>
+  <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab tab-bar__tab--selected">
       <i class="fa fa-user"></i>
       <span class="tab-bar__title">친구</span>
@@ -96,3 +102,6 @@
   </nav> <!-- 하단 푸터 네비게이션 바 -->
 </body>
 </html>
+
+<!-- Reset.css는 규칙들의 모임이다. 모든 세팅을 0으로 만들어주는 코드이다
+    브라우저들이 임시로 갖고있는 세팅이 있는데, reset.css 는 이를 무효홧키고 다 0으로 만든다.-->
