--- a/more.html
+++ b/more.html
@@ -6,42 +6,49 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <title>more</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class= "top-header">
     <div class="header__top">
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fas fa-plane"></i>
         <i class="fas fa-wifi"></i>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header_time">11:24</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fas fa-moon"></i>
         <i class="fab fa-bluetooth-b"></i>
         <span class="header_bettery">111% <i class="fas fa-battery-full"></i> </span>
       </div>
     </div>
     <div class="header__bottom">
-      <div class="header__cloumn">
+      <div class="header__column">
+
+      </div>
+      <div class="header__column">
         <span class="header__text">더보기</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <i class="fa fa-cog fa-lg"></i>
       </div>
-    </div>
+    </div> <!-- 상단 헤더 섹션 -->
   </header>
+
   <main class="more">
     <header class="more__header">
       <div class="more__header-cloumn">
-        <img src="" alt="">
-        <div class="more__hader-info">
+        <img src="images/kakao_friends.png" alt="">
+        <div class="more__header-info">
           <h3 class="more__header-title">건상</h3>
           <span class="more__header-subtitle">rhcn258@gmail.com</span>
         </div>
       </div>
     </header>
+
+
     <section class="more__options">
       <div class="more__option">
           <i class="far fa-smile fa-2x"></i>
@@ -65,40 +72,42 @@
         <h2 class="plus__friends-title">Plus Friends</h2>
         <span class="plus__friends-learn-more"><i class="fas fa-info-circle"></i>Learn More </span>
       </header>
-      <div class="plus__friends-item">
-        <i class="fas fa-utensils"></i>
-        <span class="plus__friends-item-title">주문하기</span>
-      </div>
-      <div class="plus__friends-item">
-        <i class="fas fa-store"></i>
-        <span class="plus__friends-item-title">카카오 스토어</span>
-      </div>
-      <div class="plus__friends-item">
-        <i class="fas fa-tv"></i>
-        <span class="plus__friends-item-title">카카오 TV</span>
-      </div>
-      <div class="plus__friends-item">
-        <i class="fas fa-music"></i>
-        <span class="plus__friends-item-title">카카오 뮤직</span>
-      </div>
-      <div class="plus__friends-item">
-        <i class="fas fa-video"></i>
-        <span class="plus__friends-item-title">카카오 영화</span>
-      </div>
-      <div class="plus__friends-item">
-        <i class="fab fa-cc-visa"></i>
-        <span class="plus__friends-item-title">카카오 페이</span>
-      </div>
-      <div class="plus__friends-item">
-        <i class="fas fa-cloud"></i>
-        <span class="plus__friends-item-title">카카오 날씨</span>
-      </div>
-      <div class="plus__friends-item">
-        <i class="fas fa-plus"></i>
-        <span class="plus__friends-item-title">전체보기</span>
+      <div class="plus__friends-items">
+        <div class="plus__friends-item">
+          <i class="fas fa-utensils"></i>
+          <span class="plus__friends-item-title">주문하기</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fas fa-store"></i>
+          <span class="plus__friends-item-title">카카오 스토어</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fas fa-tv"></i>
+          <span class="plus__friends-item-title">카카오 TV</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fas fa-music"></i>
+          <span class="plus__friends-item-title">카카오 뮤직</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fas fa-video"></i>
+          <span class="plus__friends-item-title">카카오 영화</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fab fa-cc-visa"></i>
+          <span class="plus__friends-item-title">카카오 페이</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fas fa-cloud"></i>
+          <span class="plus__friends-item-title">카카오 날씨</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fas fa-plus"></i>
+          <span class="plus__friends-item-title">전체보기</span>
+        </div>
       </div>
     </section>
-    <section class="more__options">
+    <section class="more__links">
       <div class="more__option">
         <img src="images/kakao_story.png" class="more__options-image">
         <span class="more__options-title">카카오 스토리</span>
@@ -113,7 +122,8 @@
       </div>
     </section>
   </main>
-  <nav>
+
+  <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
       <span class="tab-bar__title">친구</span>
@@ -129,10 +139,10 @@
       <span class="tab-bar__title">채널</span>
     </a>
 
-    <a href="more.html" class="tab-bar__tab tab-bar__tab—selected">
+    <a href="more.html" class="tab-bar__tab tab-bar__tab--selected">
       <i class="fa fa-ellipsis-h"></i>
       <span class="tab-bar__title">더보기</span>
     </a>
-  </nav>
+  </nav> <!-- 하단 푸터 네비게이션 바 -->
 </body>
 </html>
