채널 페이지를 제작했습니다.
채널 페이지에서는 뉴스, 컨텐츠, 광고 등을 기입해 css 스타일링을 끝냈습니다.

--- a/channel.html
+++ b/channel.html
@@ -42,28 +42,84 @@
   </div> <!-- 검색 섹션 -->
 </main>
 <main class="channel">
-  <div class="channel__header">
+  <header class="channel__header">
     <div class="channel__header-cloumn">
-      <h2 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h2>
+      <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
       <span class="channel__header-subtitle"> 스포티비뉴스 </span>
-      <img src="images/news_1.png">
     </div>
-  </div>
-  <div class="channel__header">
-    <div class="channel__header-cloumn">
-      <h2 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h2>
-      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
-      <img src="images/news_1.png">
-    </div>
-  </div>
+    <img src="images/news_1.png">
+  </header>
 
-  <div class="channel__header">
+  <header class="channel__header">
     <div class="channel__header-cloumn">
-      <h2 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h2>
+      <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
       <span class="channel__header-subtitle"> 스포티비뉴스 </span>
-      <img src="images/news_1.png">
     </div>
+    <img src="images/news_1.png">
+  </header>
+
+  <header class="channel__header">
+    <div class="channel__header-cloumn">
+      <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
+      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+    </div>
+    <img src="images/news_1.png">
+  </header> <!-- 뉴스 섹션 -->
+
+  <section class="channel__options">
+    <div class="channel__option">
+        <i class="fas fa-gamepad"></i>
+        <span class="channel__option-title">카카오 게임</span>
+    </div>
+    <div class="channel__option">
+        <i class="fas fa-file"></i>
+        <span class="channel__option-title">카카오 페이지</span>
+    </div>
+    <div class="channel__option">
+        <i class="fas fa-taxi"></i>
+        <span class="channel__option-title">카카오 택시</span>
+    </div>
+    <div class="channel__option">
+        <i class="fas fa-play"></i>
+        <span class="channel__option-title">카카오 뮤직</span>
+    </div>
+  </section>
+
+  <header class="channel__AD">
+    <div class="channel__AD-top">
+      <h3 class="channel__AD-top-title">지그재그</h3>
+      <span class="channel__AD-top-subtitle">AD</span>
+    </div>
+    <div class="channel__AD-img">
+    <img src="images/AD_1.png">
   </div>
+  <div class="channel__Ad-bottom">
+    <h3 class="channel__AD-bottom-title">옷, 어디서사지??</h3>
+    <span class="channel__AD-bottom-subtitle">쇼핑하기</span>
+  </div>
+  </header>
+
+  <header class="channel__header">
+    <div class="channel__header-cloumn">
+      <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
+      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+    </div>
+    <img src="images/news_1.png">
+  </header>
+  <header class="channel__header">
+    <div class="channel__header-cloumn">
+      <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
+      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+    </div>
+    <img src="images/news_1.png">
+  </header>
+  <header class="channel__header">
+    <div class="channel__header-cloumn">
+      <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
+      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+    </div>
+    <img src="images/news_1.png">
+  </header> <!-- 뉴스 섹션 -->
 </main>
   <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
