프로필 섹션 작성 및 스타일링 완료
프로필 섹션을 작성 완료하였고
커버 사진, 프로필 사진 위치 조정, 아이콘 위치 조정 을 끝냈습니다.
커버 사진은 material design을 적용했습니다.

--- a/profile.html
+++ b/profile.html
@@ -41,22 +41,26 @@
   </header>
     <main class="profile">
       <header class="profile__header">
-        <img src="images/kakao_friends.png">
-        <h3 class="profile__header-title">건상</h3>
-      </header>
-      <input type="text" placeholder="rhcn258@gmail.com">
-      <div class="profile__actions">
-        <div class="profile__action">
-          <span class="profile__action-ciricle">
-            <i class="fa fa-comment fa-2x"></i>
-          </span>
-          <span class="profile__action-title">나와의 채팅</span>
+        <div class="profile__header-container">
+          <img src="images/kakao_friends.png">
+          <h3 class="profile__header-title">건상</h3>
         </div>
-        <div class="profile__action">
-          <span class="profile__action-ciricle">
-            <i class="fa fa-pencil-alt fa-2x"></i>
-          </span>
-          <span class="profile__action-title">프로필 관리</span>
+      </header>
+      <div class="profile__container">
+        <input type="text" placeholder="rhcn258@gmail.com">
+        <div class="profile__actions">
+          <div class="profile__action">
+            <span class="profile__action-ciricle">
+              <i class="fa fa-comment "></i>
+            </span>
+            <span class="profile__action-title">나와의 채팅</span>
+          </div>
+          <div class="profile__action">
+            <span class="profile__action-ciricle">
+              <i class="fa fa-pencil-alt "></i>
+            </span>
+            <span class="profile__action-title">프로필 관리</span>
+          </div>
         </div>
       </div>
     </main>
