모든 페이지 작성 완료!!
Chats 페이지 css 완료 ,
모든 사이트 작성 완료

--- a/chat.html
+++ b/chat.html
@@ -8,8 +8,8 @@
   <title>Chat</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header class= "top-header">
+<body class="body-chat">
+  <header class= "top-header chat-header">
     <div class="header__top">
       <div class="header__column">
         <i class="fas fa-plane"></i>
@@ -42,24 +42,25 @@
   <main class="chat">
     <div class="date-divider">
       <span class="date-divider__text">화요일, 2018년 6월 19일</span>
+    </div>
         <div class="chat__message chat__message-from-me">
           <span class="chat__message-time">17:55</span>
           <span class="chat__message-body">유정아 밥 먹었어?</span>
         </div>
-    </div>
-    <div class="date-divider">
+
         <div class="chat__message chat__message-to-me">
-          <img src="images/profile_photo_1.jpg" class="chat__message-avaatar">
+          <img src="images/kakao_friends.png" class="chat__message-avaatar">
           <div class="chat__message-center">
             <h3 class="chat__message-username">유정</h3>
+            <span class="chat__message-body">응 파스타 먹었어!! 건상아 넌 뭐하고있었어?</span>
           </div>
-          <span class="chat__message-body">응 파스타 먹었어!! 건상아 넌 뭐하고있었어?</span>
+
           <span class="chat__message-time">17:57</span>
         </div>
-    </div>
+
   </main>
-  <div class="tpye-message">
-    <i class="fa fa-plus fa-2x"></i>
+  <div class="type-message">
+    <i class="fa fa-plus "></i>
     <div class="type-message__input">
       <input type="text">
       <i class="fa fa-smile-o"></i>
