채널에 이미지를 변경해주었습니다.
채널에 이미지를 변경해주었고 여러 부분에 사이즈 및 위치를 조절해줬습니다.

--- a/channel.html
+++ b/channel.html
@@ -44,24 +44,24 @@
 <main class="channel">
   <header class="channel__header">
     <div class="channel__header-cloumn">
-      <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
-      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+      <h3 class="channel__header-title"> 2,600개가 넘는 여성 쇼핑몰!! </h3>
+      <span class="channel__header-subtitle"> 피터의 블로그 후기 </span>
     </div>
-    <img src="images/news_1.png">
+    <img src="https://lh3.googleusercontent.com/t2jLmTM1jkS-vxtq-UCM7kGFZtvRZOslxhY5wXIxiwRifdc0qc48N2ZdwoQsTiqjEcUS">
+  </header>
+
+  <header class="channel__header">
+    <div class="channel__header-cloumn">
+      <h3 class="channel__header-title"> 여름옷 아직도 못골랐어? </h3>
+      <span class="channel__header-subtitle"> 여성 패션 블로거 </span>
+    </div>
+    <img src="https://zigzag.kr/img/share.png">
   </header>
 
   <header class="channel__header">
     <div class="channel__header-cloumn">
       <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
-      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
-    </div>
-    <img src="images/news_1.png">
-  </header>
-
-  <header class="channel__header">
-    <div class="channel__header-cloumn">
-      <h3 class="channel__header-title"> 왜 회사들은 React.js 개발자를 원하는가? </h3>
-      <span class="channel__header-subtitle"> 스포티비뉴스 </span>
+      <span class="channel__header-subtitle"> 개발자뉴스 </span>
     </div>
     <img src="images/news_1.png">
   </header> <!-- 뉴스 섹션 -->
