--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <main class="friends">
     <div class="search-bar">
-      
+
       <input type="text" placeholder="검색">
     </div> <!-- 검색 섹션 -->
 
@@ -55,11 +55,7 @@
           건상
           </a>
         </div>
-        <div class="friends__section-rows">
-          <div class="friends__section-row">
-            <img src="" alt="">
-            <span class="friends__section-name">친구의 이름이 표시됩니다.</span>
-          </div>
+        
       </div>
     </section> <!-- 내 프로필 섹션 -->
 
@@ -70,7 +66,7 @@
       <div class="friends__section-rows">
         <div class="friends__section-row with-tagline">
             <div class="friends__section-column">
-            <img src="images/profile_photo_3.png">
+            <img src="images/kakao_friends.png">
           <span class="friends__section-name">유정</span>
           </div>
         <span class="friends__section-tagline">유정유정해</span>
